# alterator-usbmount

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Classes.drawio  CppCheckSuppressions.cppcheck  Doxyfile.in  README  arch_diagram.drawio  fstab_test.cpp  guard.cpp  guard.hpp  lispmessage.cpp  lispmessage.hpp  main.cpp  message_dispatcher.cpp  message_dispatcher.hpp  message_reader.cpp  message_reader.hpp  types.hpp  usb_device.cpp  usb_device.hpp  utils.cpp  utils.hpp  Ограничения USB.drawio
.gear/: alterator-usbguard.spec  alterator-usbmount.spec  rules
.gear/tags/: list
alterator_bindings/: CMakeLists.txt  common_utils.cpp  common_utils.hpp  lisp_message.cpp  lisp_message.hpp  log.hpp  message_dispatcher.cpp  message_dispatcher.hpp  message_reader.cpp  message_reader.hpp  serializable_for_lisp.hpp  types.hpp
alterator_ui/: UI.drawio  USBGuard.desktop  ajax.scm  alt-usb-guard.js  alt_usb_guard.css  alterator-usbguard.po  alterator-usbguard.pot  index.html  simple.desktop  update_po.sh  usbguard.html
alterator_usbmount/: CMakeLists.txt
alterator_usbmount/backend/: CMakeLists.txt  active_device.cpp  active_device.hpp  dispatcher_impl.cpp  dispatcher_impl.hpp  main.cpp  usb_mount.cpp  usb_mount.hpp
alterator_usbmount/usbmount_ui/: USBMount.desktop  ajax.scm  alt_usb_mount.css  alt_usb_mount.js  alterator-usbmount.po  alterator-usbmount.pot  index.html  update_po.sh  usbmount.html
android_vidpid_parser/: CMakeLists.txt  android_vidpid.json  curl_wrapper.cpp  curl_wrapper.hpp  main.cpp
automount/: CMakeLists.txt  custom_mount.cpp  custom_mount.hpp  main.cpp  mount_test.cpp  usb_udev_device.cpp  usb_udev_device.hpp  utils.cpp  utils.hpp
automount/service_files/: alterator-usb-automount.conf  alterator-usb-mount@.service
backend/: CMakeLists.txt  config_status.cpp  config_status.hpp  csv_rule.cpp  csv_rule.hpp  dispatcher_impl.cpp  dispatcher_impl.hpp  guard.cpp  guard.hpp  guard_audit.cpp  guard_audit.hpp  guard_rule.cpp  guard_rule.hpp  guard_utils.cpp  guard_utils.hpp  json_changes.cpp  json_changes.hpp  json_rule.cpp  json_rule.hpp  lisp_message.cpp  lisp_message.hpp  lispmessage.cpp  lispmessage.hpp  log.hpp  main.cpp  message_dispatcher.cpp  message_dispatcher.hpp  message_reader.cpp  message_reader.hpp  serializible_for_lisp.hpp  systemd_dbus.cpp  systemd_dbus.hpp  types.hpp  usb_device.cpp  usb_device.hpp  utils.cpp  utils.hpp
cmake/: ClangTidy.cmake  CppCheck.cmake  Format.cmake
common/: CMakeLists.txt  boost_json.cpp  log_reader.cpp  log_reader.hpp  systemd_dbus.cpp  systemd_dbus.hpp
daemon/: CMakeLists.txt  classes.drawio  config.hpp  custom_mount.cpp  custom_mount.hpp  daemon.cpp  daemon.hpp  dbus_methods.cpp  dbus_methods.hpp  local_storage.cpp  local_storage.hpp  main.cpp  mount_test.cpp  ru.alterator.usbd.conf  udev_monitor.cpp  udev_monitor.hpp  udisks_dbus.cpp  udisks_dbus.hpp  usb-mount@.service  usb_udev_device.cpp  usb_udev_device.hpp  utils.cpp  utils.hpp  Диаграмма без названия.drawio
daemon/dal/: CMakeLists.txt  device_permissions.cpp  device_permissions.hpp  dto.cpp  dto.hpp  local_storage.cpp  local_storage.hpp  mount_points.cpp  mount_points.hpp  table.cpp  table.hpp
daemon/dal/test/: CMakeLists.txt  test_dal.cpp
daemon/polkit/: CMakeLists.txt  alt-usb-mount.rules  main.cpp
daemon/service_files/: altusbd.service  ru.alterator.usbd.conf
daemon/test/: CMakeLists.txt  test.cpp
experimental/: CMakeLists.txt  fstab_test.cpp
experimental/automount/: CMakeLists.txt  custom_mount.cpp  custom_mount.hpp  main.cpp  mount_test.cpp  usb_udev_device.cpp  usb_udev_device.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  bad.rules  good.rules  run.cpp  test.cpp  test.hpp  validation_rules.md  validation_rules.txt
